btn spacing corrected and additional ui update

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -26,7 +26,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
     gap: 30px;
     list-style: none;
 }
@@ -95,6 +94,10 @@ footer {
 }
 
 @media screen and (max-width: 480px) {
+    body {
+        font-size: 1rem;
+    }
+
     .links {
         padding: 7px;
     }
@@ -104,7 +107,7 @@ footer {
     }
 
     .links > li > a {
-        font-size: 0.8rem;
+        font-size: 1rem;
     }
 }
 
